[package]
name = "kovi-plugin-help-center"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
description = "Kovi 的高颜值帮助菜单插件，基于 HTML/CSS 渲染玻璃拟态 UI，支持分类管理与指令搜索。"
repository = "https://github.com/araea/kovi-plugin-help-center"
keywords = ["kovi", "kovi-plugin", "help", "ui", "visualization"]
categories = ["visualization", "rendering"]

[dependencies]
kovi = ">= 0.12"
tera = "1.20"
anyhow = "1.0"
base64 = "0.22"
cdp-html-shot = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
